# 4_En_Linea

./: CMakeLists.txt  README.md
include/: DrawingCanvas.hh  IAAvanzada.hh  IAFacil.hh  IJugador.hh  JugadorHumano.hh  MainMenuDialog.hh  NewGameFrame.hh  ReplayDialog.hh  Tablero.hh
src/: CMakeLists.txt  DrawingCanvas.cpp  IAAvanzada.cc  IAFacil.cc  JugadorHumano.cc  MainMenuDialog.cc  NewGameFrame.cc  Tablero.cc  jugarEnTerminal.cpp  main.cpp
tests/: CMakeLists.txt  test_IAAvanzada.cpp  test_IAFacil.cpp  test_JugadorHumano.cpp  test_Tablero.cpp
